<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small"
    android:background="@drawable/rounded_corner"
    android:padding="@dimen/margin_medium">

    <TextView
        android:id="@+id/textViewTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_xlarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTemperatureRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature_range"
        android:textSize="@dimen/text_size_medium"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textViewTemperature"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewWeatherIcon"
        android:layout_width="@dimen/margin_xxlarge"
        android:layout_height="@dimen/margin_xxlarge"
        android:src="@drawable/ic_sunny"
        app:layout_constraintTop_toTopOf="@id/textViewTemperature"
        app:layout_constraintBottom_toBottomOf="@id/textViewTemperature"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewCityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textSize="@dimen/text_size_medium"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textViewTemperatureRange"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewWeatherDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_description"
        android:textSize="@dimen/text_size_medium"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toBottomOf="@id/imageViewWeatherIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/textViewCityName"
        app:layout_constraintTop_toTopOf="@id/textViewCityName"/>




</androidx.constraintlayout.widget.ConstraintLayout>